# FreeEEG

./: .gitignore  README.md  pcb_issues.txt
Client/: FreeEEG.py  TAGS  plot_test.py  pyproject.toml  test_metadata.py  test_udp.py
Client/FreeEEG/: __init__.py  client.py
Client/FreeEEG/examples/: latency.py  plot_and_save.py  print.py
Client/FreeEEG/util/: plot.py  print.py  read_csv.py  simulate_device.py
Electronics/: FreeEEG.kicad_pcb  FreeEEG.kicad_pro  FreeEEG.kicad_sch  bom.xls  fp-lib-table  sym-lib-table
Electronics/lib/AD8421ARMZ/: AD8421ARMZ.kicad_sym  SOP65P490X110-8N.kicad_mod
Electronics/lib/ADS131M08IPBS/: ADS131M08IPBS.kicad_sym  PBS0032A_L.kicad_mod  PBS0032A_M.kicad_mod  PBS0032A_N.kicad_mod
Electronics/lib/LIB_10137065-00021LF/: 10137065-00021LF.kicad_sym  AMPHENOL_10137065-00021LF.kicad_mod
Electronics/lib/LIB_TC5050RGBF08-3CJH-AF53A/: TC5050RGBF08-3CJH-AF53A.dcm  TC5050RGBF08-3CJH-AF53A.kicad_sym  TC5050RGBF08-3CJH-AF53A.lib  TC5050RGBF08-3CJH-AF53A.mod  TC5050RGBF08-3CJH-AF53A.stp  TC5050RGBF083CJHAF53A.kicad_mod
Electronics/lib/LIB_TF-01A/: TF-01A.kicad_mod  (+1 more)
Electronics/production/: netlist.ipc
Firmware/: CMakeLists.txt  sdkconfig
Firmware/ESP8266/: TAGS  platformio.ini
Firmware/main/: CMakeLists.txt  ESP32.c  TAGS
Firmware/main/drivers/: RGB_LED.c  ads1299.c  mpu6050.c
Firmware/main/include/: RGB_LED.h  ads1299.h  config.h  index.html.h  mpu6050.h  tasks.h  wifi_app.h
Firmware/main/net/: #wifi_app_config.c#  config.c  index.html  wifi_app_ap.c  wifi_app_config.c  wifi_app_data.c
Firmware/main/tasks/: tasks.c
(+29 files in other folders)
