idf_component_register(SRCS "ESP32.c"
			    "drivers/ads1299.c"
			    "drivers/mpu6050.c"
			    "drivers/sd_card.c"
			    "drivers/RGB_LED.c"
			    "net/wifi_app_ap.c"
			    "net/wifi_app_config.c"
			    "net/wifi_app_data.c"
			    "net/config.c"
			    "tasks/tasks.c"
			    INCLUDE_DIRS "include")
